# olap-newbie-training-homework

./: CMakeLists.txt  LICENSE  README.md  debug_infos.md
cmake/: FindFolly.cmake  FindGLog.cmake  FindIberty.cmake
src/: CMakeLists.txt  Constants.h  FileUtils.cc  FileUtils.h  Solution.cc  Solution.h  Worker.cc  Worker.h
test/: CMakeLists.txt  SolutionTest.cc
